<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShareStatusActivityBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ShareStatusActivity">

    <TextView
        android:id="@+id/shareYourStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:text="@string/Share_your_status"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sharePlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shareYourStatus"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/share_plans"
        android:textSize="12sp"
        android:textStyle="normal" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image_share_status"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/sharePlan"
        android:paddingLeft="8dp"
        android:src="@drawable/photo"
        android:layout_marginTop="10dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"

        android:layout_below="@+id/sharePlan"
        android:layout_toEndOf="@+id/profile_image_share_status"
        android:layout_toRightOf="@+id/profile_image_share_status"
        app:counterMaxLength="140">

        <EditText
            android:id="@+id/statusEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingLeft="16dp"
            android:textSize="12sp" />
    </android.support.design.widget.TextInputLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/statusVisibility"
    android:textSize="10sp"
    android:layout_below="@+id/textContainer"
    android:text="@string/status_visibility"/>
</RelativeLayout>
